@startuml
enum PositionStatus {
    Open,
    Close,
}
enum PositionType {
    Long,
    Short,
}
class Position {
    + Id : string <<get>> <<init>>
    + Quantity : float <<get>> <<init>>
    + Entry : decimal <<get>> <<init>>
    + Exit : decimal <<get>>
    +  <<event>> OnClosed : Action<Position>? 
    + PnL : decimal <<get>>
    + IsWin : bool <<get>>
    + Position(symbol:Symbol, type:PositionType, quantity:float, entry:decimal, entryAt:DateTime, id:string?, exit:decimal?, exitAt:DateTime?)
    + Close(exitPrice:decimal, exitDate:DateTime) : void
}
Position --> "Symbol" Symbol
Position --> "Type" PositionType
Position --> "EntryAt" DateTime
Position --> "ExitAt" DateTime
Position --> "Status" PositionStatus
@enduml
